--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ google-api-python-client==1.7.11
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
-httplib2==0.14.0
+httplib2>=0.18.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -35,7 +35,7 @@ pymongo==3.11.0
 python-dateutil==2.8.0
 python-telegram-bot==12.1.1
 pytz==2019.3
-pyxdg==0.25
+pyxdg>=0.26
 requests==2.22.0
 requests-oauthlib==1.2.0
 rsa==4.0
