docker setup update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,5 @@ services:
     container_name: "ring"
     ports:
       - "443:443"
-    command: sh -c "(cd /data/ && git pull)&& python3 /data/setup.py runserver"
+    command: sh -c "(cd /data/ && git pull)&& python3 setup.py runserver"
     restart: always
