--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,18 @@
-asn1crypto==1.0.1
-cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
+blinker==1.4
 click==7.1.2
-cryptography==2.7
 dominate==2.5.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Moment==0.10.0
 Flask-Script==2.0.6
 Flask-WTF==0.14.3
-future==0.17.1
-google-api-python-client==1.7.11
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.1
-httplib2>=0.18.0
-idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.2
-keyring==10.6.0
-keyrings.alt==3.0
 MarkupSafe==1.1.1
-numpy==1.17.2
-oauthlib==3.1.0
-pandas==0.25.1
-pyasn1==0.4.7
-pyasn1-modules==0.2.6
-pycparser==2.19
-pycrypto==2.6.1
-pygobject==3.26.1
-pygsheets==2.0.2
+numpy==1.19.1
 pymongo==3.11.0
-python-dateutil==2.8.0
-python-telegram-bot==12.1.1
-pytz==2019.3
-pyxdg>=0.26
-requests==2.22.0
-requests-oauthlib==1.2.0
-rsa==4.0
-SecretStorage==2.3.1
-six==1.12.0
-tornado==6.0.3
-uritemplate==3.0.0
-urllib3==1.25.6
 visitor==0.1.3
-Werkzeug==0.15.6                                                                                   
+Werkzeug==0.15.6
 WTForms==2.2.1
-flask_mail
-flask_login
-flask_moment
