--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,4 @@ fabric.properties
 # pytype static type analyzer
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,certificates,flask,macos
+/flaskfolium/
