--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-numpy==1.20.0rc1
+numpy
 pymongo==3.11.2
 visitor==0.1.3
 Werkzeug==0.15.6
